Fix for iPhone 6S
- Fixed horizontal scrolling again

--- a/password-generator/styles.css
+++ b/password-generator/styles.css
@@ -143,10 +143,9 @@ body {
   align-items: center;
   gap: 2em;
   min-height: 100vh;
-  max-width: 100vw;
   margin: 0;
   padding: 0;
-  overflow: overlay;
+  overflow-y: overlay;
 }
 
 main {
